--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "i18next": "^21.6.12",
     "i18next-browser-languagedetector": "^6.1.3",
     "next": "12.1.0",
+    "next-pwa": "^5.4.5",
     "react": "17.0.2",
     "react-button-container": "^1.1.1",
     "react-component-datas": "^1.0.4",
